contrast-problem-solved

--- a/style.css
+++ b/style.css
@@ -9,3 +9,7 @@ p{
     color: #333;
 }
 
+.address{
+    font-weight: bold ;
+    color: solid black;
+}
